# Gps-data-service

./: .env.example  .gitignore  ARCHITECTURE_SCHEMA.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/schemas/gps_reports/: base.py  last_pos.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  jobs.py
app/application/jobs/: engine_status_job.py  ignition_job.py  odometer_job.py  speed_monitoring_job.py  vehicle_position_job.py  voltage_health_job.py
app/application/services/: normalization_service.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/domain/interfaces/: gps_provider.py  repository.py
app/domain/models/: enums.py  vehicle.py  vehicle_telemetry.py
app/infrastructure/database/: mongodb.py
app/infrastructure/database/repositories/: telemetry_repository.py  vehicle_repository.py
app/infrastructure/gps_providers/: mock_provider.py
app/infrastructure/http/: client.py
app/scheduler/: scheduler_manager.py
scripts/: README.md  seed_mock_vehicles.py
