[tool.poetry]
name = "gps-data-collection-service"
version = "1.0.0"
description = "Enterprise GPS IoT Data Collection Microservice"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI & Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Async HTTP Client
httpx = "^0.26.0"
tenacity = "^8.2.3"

# Database
motor = "^3.3.2"  # Async MongoDB driver
pymongo = "^4.6.1"

# Scheduling
apscheduler = "^3.10.4"

# Logging
python-json-logger = "^2.0.7"

# Utilities
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx-mock = "^0.1.0"

[tool.poetry.group.test.dependencies]
faker = "^22.5.0"
mongomock-motor = "^0.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"